added pwd validation and added changes to signup page, fixed header2 page

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@ body {
 }
 
 /**
-** Flex Wrapper
+** Flex Wrapper START
 **/
+
 @media only screen and (min-width: 1025px) {
   .main-wrapper {
     display: flex;
@@ -26,3 +27,7 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
 }
+
+/**
+** Flex Wrapper END
+**/
